--- a/Modulos/productos/view/create_product.html
+++ b/Modulos/productos/view/create_product.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formulario de Producto</title>
+  
 </head>
 <body>
-    
+  <h1>Formulario de Producto</h1>
+
+  <form id="productForm" action="/create_product" method="post">
+    <label>Nombre:</label><br>
+    <input type="text" id="name" name="name" required><br>
+
+    <label>Descripción:</label><br>
+    <textarea id="description" name="description" required></textarea><br>
+
+    <label>Cantidad:</label><br>
+    <input type="number" id="cant" name="cant" required><br>
+
+    <label>Precio:</label><br>
+    <input type="number" step="0.01" name="price" id="price" required><br><br>
+
+    <button type="submit">Agregar Producto</button>
+  </form>
+
 </body>
 </html>
