--- a/Modulos/productos/view/create_product.html
+++ b/Modulos/productos/view/create_product.html
@@ -15,6 +15,11 @@
 
     <label>Descripción:</label><br>
     <textarea id="description" name="description" required></textarea><br>
+    
+    <label>Categoria</label><br>
+    <select name="category_id" id="category_id">
+      <option value="">Seleccione una categoria</option>
+    </select><br><br>
 
     <label>Cantidad:</label><br>
     <input type="number" id="cant" name="cant" required><br>
@@ -23,6 +28,8 @@
     <input type="number" step="0.01" name="price" id="price" required><br><br>
 
     <button type="submit">Agregar Producto</button>
+     <button type="submit">Actualizar
+     </button>
   </form>
 
 </body>
