--- a/Modulos/productos/view/create_product.html
+++ b/Modulos/productos/view/create_product.html
@@ -28,7 +28,7 @@
     <input type="number" step="0.01" name="price" id="price" required><br><br>
 
     <button type="submit">Agregar Producto</button>
-     <button type="submit">Actualizar
+    <button onclick="location.href='/view_product'">Volver</button>
      </button>
   </form>
 
