--- a/Modulos/productos/view/view_product.html
+++ b/Modulos/productos/view/view_product.html
@@ -45,7 +45,7 @@
                             <td>$${p.precio}</td>
                             <td>${p.categoria}</td>
                             <td>
-                                <input type="button" value="Carrito" onclick="location.href='/cart'">
+                                <input type="button" value="Carrito" onclick="location.href='/view_carrito'">
                                 <input type="button" value="Editar" onclick="location.href='/edit_product'">
                                 <button onclick="eliminarProducto(${p.id})">Eliminar</button>
                             </td>
