--- a/Modulos/productos/view/view_product.html
+++ b/Modulos/productos/view/view_product.html
@@ -9,6 +9,7 @@
     <h1>Productos Disponibles</h1>
     <input type="button" value="Agregar Producto" onclick="location.href='/create_product'">
     <input type="button" value="Categorias" onclick="location.href='/category'">
+    <input type="button" value="Carrito" onclick="location.href='/view_carrito'">
     <br><br>
 
     <table border="1" style="width: 100%; text-align: center;">
@@ -45,7 +46,8 @@
                             <td>$${p.precio}</td>
                             <td>${p.categoria}</td>
                             <td>
-                                <input type="button" value="Carrito" onclick="location.href='/view_carrito'">
+
+                                <input type="button" value="Comprar" onclick="">
                                 <input type="button" value="Editar" onclick="location.href='/edit_product'">
                                 <button onclick="eliminarProducto(${p.id})">Eliminar</button>
                             </td>
@@ -75,5 +77,6 @@
 
         cargarProductos();
     </script>
+
 </body>
 </html>
